Made the links a little bigger and reduced the radius of the fisheye.  Seems to have improved the issue with the nodes distorting before the links somewhat.

--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -39,7 +39,11 @@ body {
   width: 70px;
 }
 
-/* Fore Directed Graph */
+/* Force Directed Graph */
+
+.node {
+  stroke-width: 1.5px;
+}
 
 .node text {
   pointer-events: none;
